[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-anonymizer"
version = "2024.05.02"
description = "Simple script to anonymize student programming assignments"
readme = "README.md"
authors = [
    {name = "Charlotte Curtis", email = "ccurtis@mtroyal.ca"},
]
requires-python = ">=3.10"
dependencies = [
    "presidio-analyzer",
    "presidio-anonymizer",
]

[project.scripts]
code-anonymizer = "anon:main"